Bug 402301: Migration: UI Independent tests
warnings in tests removed

https://git.eclipse.org/r/#/c/18655/
Change-Id: I7af28f7689b06eca520b4215b334a9361123cde3
Signed-off-by: Judith Gull <jgu@bsiag.com>
Reviewed-on: https://git.eclipse.org/r/32222
Tested-by: Hudson CI